# Minimal-Visual-Odometry

./: .gitignore  CMakeLists.txt  README.md  front_cam_calib.yaml  web_cam_calib.yaml
include/geometry/: geometry.hpp
include/map/: g2o.hpp  map.hpp
include/vo_core/: feature_extractor.hpp  feature_matcher.hpp  feature_matcher_map.hpp  pose_estimator.hpp  slam_pipeline.hpp  vo_pipeline.hpp
src/: calibrate.cpp
src/geometry/: geometry.cpp
src/vo_core/: feature_extractor.cpp  feature_matcher.cpp  pose_estimator.cpp  vo_pipeline.cpp
test/: cam_feature.cpp  parameters_tune.cpp  test_feature.cpp  test_matcher.cpp  tum_vo_only.cpp
test/data/: est_traj_vo.csv  gt_traj_vo.csv  tune_results.csv
